# rsyn-x

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitrepo  .travis.yml  CMakeLists.txt  README.md  incs
db/: CMakeLists.txt  Database.cpp
db/core/: Rsyn.h
db/core/dscp/: LibraryCell.h  LibraryModule.h
db/core/infra/: Attribute.h  Exception.h  List.h  Observer.h  RawPointer.h
db/io/: Report.h
db/io/parser/: parser_helper.cpp
db/io/parser/bookshelf/: BookshelfParser.cpp
db/io/parser/guide/: GuideParser.cpp  GuideParser.h
db/io/parser/lef_def/: LEFControlParser.cpp  LEFControlParser.h
db/io/parser/sdc/: SDCControlParser.cpp
db/io/parser/spef/: SPEFControlParser.h
db/io/parser/verilog/: SimplifiedVerilog.tab.cc  SimplifiedVerilog.tab.hh  SimplifiedVerilogReader.cpp
db/io/reader/: ICCAD15ReaderExtended.cpp  ICCAD17Reader.h  ISPD2012Reader.h  PopulateRsyn.cpp  SizingISPDReader.cpp
db/io/writer/: Writer.cpp  Writer.h  WriterDEF.h
db/phy/: PhysicalRouting.cpp  PhysicalRouting.h
db/phy/infra/: PhysicalObserver.h
db/phy/util/: BookshelfMapper.cpp  BookshelfMapper.h  LefDescriptors.h  PhysicalLayerUtil.cpp  PhysicalTransform.cpp  PhysicalTransform.h  PhysicalTypes.h  PhysicalUtil.h
db/util/: DBU.h  Dim.h  Double2.h  FloatingPoint.h  Json.h  Point.h  Polygon.h  Proxy.h  Rect.h  TristateFlag.h
doc/example/: PhysicalDesignEx.cpp  PhysicalDesignEx.h  QuadraticPlacement.cpp  QuadraticPlacement.h  RandomPlacement.cpp  RandomPlacement.h  SandboxTest.cpp  SandboxTest.h
include/def5.8/: defiAssertion.h  defiAssertion.hpp  defiBlockage.h  defiBlockage.hpp  defiComponent.h  defiComponent.hpp  defiDebug.h  defiDebug.hpp  defiDefs.hpp  defiFPC.h  defiFPC.hpp  defiFill.h  defiFill.hpp  defiGroup.h  defiGroup.hpp  defiIOTiming.h  defiIOTiming.hpp  defiKRDefs.h  defiKRDefs.hpp  defiMisc.h  defiMisc.hpp  defiNet.h  defiNet.hpp  defiNonDefault.h  defiNonDefault.hpp  defiPartition.h  defiPartition.hpp  defiPath.h  defiPath.hpp  defiPinCap.h  defiPinCap.hpp  defiPinProp.h  defiPinProp.hpp  defiProp.h  defiProp.hpp  defiPropType.h  defiPropType.hpp  defiRegion.h  defiRegion.hpp  defiRowTrack.h  (+25 more)
include/flute/: CMakeLists.txt  flute.cpp  flute.h
include/lef5.8/: lefiArray.hpp  lefiCrossTalk.hpp  lefiDebug.hpp  lefiDefs.hpp  lefiEncryptInt.hpp  lefiKRDefs.hpp  lefiLayer.hpp  lefiMacro.hpp  lefiMisc.hpp  lefiNonDefault.hpp  lefiProp.hpp  lefiPropType.hpp  lefiUnits.hpp  lefiUser.hpp  lefiUtil.hpp  lefiVia.hpp  lefiViaRule.hpp  lefrCallBacks.hpp  lefrData.hpp  lefrReader.hpp  lefrSettings.hpp  lefwWriter.hpp  lefwWriterCalls.hpp  lefzlib.hpp
include/liberty/: CMakeLists.txt  PI.c  attr_lookup.c  group_enum.h  group_lookup.c  liberty_front_lex.c  liberty_parser.c  liberty_parser.h  libhash.c  libhash.h  libstrtab.c  libstrtab.h  mymalloc.c  mymalloc.h  si2dr_liberty-PI.txt  si2dr_liberty.h  syntax.h  syntax_decls.c  syntax_decls.h  syntax_parser.output  token.c  token.l
include/liberty/.libs/: libsi2dr_liberty.so.0
include/munkres/: matrix.cpp  matrix.h  munkres.h
ispd18/: .gitignore  CMakeLists.txt  README.md
ispd18/ide/netbeans/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ispd18/ide/netbeans/nbproject/private/: Makefile-variables.mk  Release.properties  configurations.xml  private.xml
ispd18/sample/ispd18_sample/: ispd18_sample.input.guide  ispd18_sample.rsyn
ispd18/script/: install-dependencies.sh
ispd18/src/ispd18/: main.cpp
ispd18/src/ispd18/demo/: ExampleProcess.cpp  ExampleProcess.h  ExampleService.cpp  ExampleService.h
ispd18/src/ispd18/gui/overlay/: Example.cpp  Example.h  register.cpp
ispd18/src/ispd18/qt/overlay/: register.cpp
ispd18/src/ispd18/qt/overlay/example/: ExampleOverlay.cpp  ExampleOverlay.h
ispd18/src/ispd18/setup/: message.cpp  process.cpp  reader.cpp  service.cpp
private/: CMakeLists.txt
private/cmake/: FindCOIN.cmake
rsyn/: .gitrepo  README.md
rsyn/experimental/dll/: Makefile  lib.cpp  main.cpp
rsyn/parser/script/: update.sh
rsyn/script/: install-dependencies.sh  install-libs.sh  update-license-header
rsyn/wx/: MainFrame.fbp  SchematicFrame.fbp
script/iccad15/: runall.sh  runallTRDP.sh
src/: LICENSE  main.cpp
src/core/: Rsyn.h  RsynTypes.h
src/db/: Database.h  Serializable.h  SerializationStream.h
src/gui/: QtUtils.cpp  QtUtils.h
src/gui/graphics/: Net.h  (+39 more)
src/io/: Graphics.cpp  Graphics.h  Report.cpp  Report.h
src/phy/: PhysicalDesign.h  PhysicalRouting.cpp  PhysicalRouting.h  PhysicalService.cpp  PhysicalService.h
src/sandbox/: Sandbox.h
src/script/: Script.l  Script.tab.cc  Script.tab.hh  Script.yy  Script.yy.cc  ScriptCommand.h  ScriptReader.cpp  ScriptReader.h  ScriptScanner.h  location.hh  position.hh  stack.hh
src/session/: Message.cpp  Message.h  Process.h  Reader.h  Service.h  Session.cpp  Session.h  SessionObserver.cpp  SessionObserver.h
src/setup/: Message.cpp  Process.cpp  Reader.cpp  Service.cpp
src/shell/: Shell.cpp  Shell.h
src/test/: regressionsService.cpp  regressionsService.h
src/util/: Array.h  AsciiProgressBar.h  BlockageControl.cpp  BlockageControl.h  Bounds.h  Color.h  Colorize.h  DBU.h  Debug.h  Double2.h  DoubleRectangle.h  Environment.h  Exception.h  Float2.h  FloatRectangle.h  Histogram.cpp  Histogram.h  Json.h  Logger.cpp  Logger.h  MD5.h  MemoryUsage.h  NetlistExtractor.cpp  NetlistExtractor.h  Point.h  Polygon.cpp  Polygon.h  RCTreeExtractor.cpp  RCTreeExtractor.h  RangeBasedLoop.h  Rect.cpp  Rect.h  Stepwatch.cpp  Stepwatch.h  Stipple.h  Stopwatch.h  StreamLogger.cpp  StreamLogger.h  StreamMirror.h  StreamStateSaver.h  (+4 more)
support/: Dockerfile  bashrc  compile-rsyn.sh  entrypoint.sh  makefile
support/iccad15/: runallTRDPSolutionIccad15.sh
support/netbeans/: configurations.xml
support/parser-script/: Script.l
support/parser-verilog/: SimplifiedVerilog.l  SimplifiedVerilog.yy
support/test/: compare-files.py  run-tests.sh
x/cmake/: FindGLPK.cmake
x/run/: ICCAD15.parm
x/script/: install-dependencies.sh  update-license-header  update-rsyn
(+741 files in other folders)
