CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(db)

SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_BINARY_DIR lib)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fpermissive")

FILE(GLOB_RECURSE SRC_FILES *.c *.cpp *.cc)

ADD_LIBRARY(db STATIC ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES(db PUBLIC ./)
TARGET_INCLUDE_DIRECTORIES(db PUBLIC ../include/)
